resources/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "1.6.2"
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31437
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
    nodePort: 31438
